Make some changes

--- a/_posts/2024-03-05-testing.md
+++ b/_posts/2024-03-05-testing.md
@@ -1,13 +1,14 @@
 ---
 title: "Testing"
-categories:
-  - Test
+# categories:
+#   - Test
 tags:
   - GMK
 ---
 
 # Test 
+___
 
 ![gmkk8]({{site.url}}/images/O1002221.jpg)
 
-<img src="{{site.url}}/images/O1002221.jpg" width="800">
+<img src="{{site.url}}/images/O1002221.jpg" width="800"><br>
