make search amd archive work

--- a/_posts/2024-03-06-post.md
+++ b/_posts/2024-03-06-post.md
@@ -49,7 +49,8 @@ Hunt-key 19V 6.32a 외경 5.5mm 내경 2.5mm 규격입니다
 내부입니다
 상단에는 M.2 NVME를 장착할 수 있는 슬롯이 두개 있으며 둘 다 PCIE 4.0x4를 만족합니다
 
-기본 무선랜카드는 RZ616(MT7922)입니다 인텔 ax210이 더 좋지만 퀵쉐어(니어바이쉐어)를 사용하지 않으면 둘 다 사용에 지장은 없습니다
+기본 무선랜카드는 RZ616(MT7922)입니다 인텔 ax210이면 더 좋았겠지만 퀵쉐어(니어바이쉐어)를 사용하지 않으면 둘 다 사용에 지장은 없습니다
+와이파이, 블루투스 드라이버는 asus의 b650e-i로 받으시면 됩니다
 혹시 무선 감도가 떨어지는 분들은 검은색 스펀지를 제거하고 결착을 한 번 확인하시는게 좋다고 하네요
 
 하단에는 DDR5 Sodimm 슬롯이 두개 있으며, JEDEC 5600클럭을 정상적으로 지원합니다
