image tag replace

--- a/_posts/2024-03-05-testing.md
+++ b/_posts/2024-03-05-testing.md
@@ -11,4 +11,6 @@ ___
 
 ![gmkk8]({{site.url}}/images/O1002221.jpg)
 
-<img src="{{site.url}}/images/O1002221.jpg" width="800"><br>
+<img src="{{{site.url}}/images/AMD8845HSSpec.png" width="800"><br>
+
+![AMD8845HSSpec]({{site.url}}/images/AMD8845HSSpec.png)
