--- a/_posts/2024-03-06-post.md
+++ b/_posts/2024-03-06-post.md
@@ -13,9 +13,9 @@ ___
 GMK K8의 스펙부터 보면 CPU는 8845HS, Hawk Point를 사용하고 있습니다
 호크포인트는 AMD의 2023년 12월 발표한 CPU 라인으로 전작인 피닉스에 AI 활용을 위한 NPU 성능을 업그레이드한 버전입니다
 
-|          8845          |          7840          |
-| :--------------------: | :--------------------: |
-| ![AMD8845HSSpec]({{site.url}}/images/AMD8845HSSpec.png) | ![AMD7840HSSpec]({{site.url}}/images/AMD7840HSSpec.png) |
+|                              8845                              |                              7840                              |
+| :------------------------------------------------------------: | :------------------------------------------------------------: |
+| <img src="{{{site.url}}/images/AMD8845HSSpec.png" width="800"> | <img src="{{{site.url}}/images/AMD7840HSSpec.png" width="800"> |
 NPU 성능을 제외하면 전혀 차이가 없어서 k6 버전을 구매하셔도 CPU 및 GPU 성능에는 차이가 없습니다
 
 어차피 k6도 이미 샀으니.. k6도 받아서 벤치마크 정도는 돌아갈 것 같네요
